Examination page claim number overlaping issude fixied

--- a/src/app/subscriber/examiner/appointment-details/appointment-details.component.scss
+++ b/src/app/subscriber/examiner/appointment-details/appointment-details.component.scss
@@ -424,8 +424,8 @@
         align-self: baseline;
         overflow-wrap: anywhere; 
         &:first-child {
-            max-width: 105px;
-            min-width: 105px;
+            max-width: 110px;
+            min-width: 110px;
         }
     }
 }
