--- a/src/app/subscriber/examiner/appointment-details/report/report.component.scss
+++ b/src/app/subscriber/examiner/appointment-details/report/report.component.scss
@@ -50,7 +50,7 @@ th {
         }
     }
 }
-demand_request {
+.odemand_request {
     mat-checkbox {
         display: block;
         margin-bottom: 20px;
